Fixed navbar a few pixels too tall

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,3 +5,7 @@
 body {
     font-family: 'Open Sans', sans-serif;
 }
+
+nav {
+    font-size: 14px;
+}
